rust/crates/dsl-core/tests/snapshots/ast_golden__ast_attribute_define.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 296
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "attribute",
                verb: "define",
                arguments: [
                    Argument {
                        key: "id",
                        value: Literal(
                            String(
                                "attr.identity.passport_number",
                            ),
                            Span {
                                start: 22,
                                end: 53,
                            },
                        ),
                        span: Span {
                            start: 18,
                            end: 53,
                        },
                    },
                    Argument {
                        key: "display-name",
                        value: Literal(
                            String(
                                "Passport Number",
                            ),
                            Span {
                                start: 68,
                                end: 85,
                            },
                        ),
                        span: Span {
                            start: 54,
                            end: 85,
                        },
                    },
                    Argument {
                        key: "category",
                        value: Literal(
                            String(
                                "identity",
                            ),
                            Span {
                                start: 96,
                                end: 106,
                            },
                        ),
                        span: Span {
                            start: 86,
                            end: 106,
                        },
                    },
                    Argument {
                        key: "value-type",
                        value: Literal(
                            String(
                                "string",
                            ),
                            Span {
                                start: 119,
                                end: 127,
                            },
                        ),
                        span: Span {
                            start: 107,
                            end: 127,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 128,
                },
            },
        ),
    ],
}
