rust/crates/dsl-core/tests/snapshots/ast_golden__ast_cbu_load.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 43
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "session",
                verb: "load-cbu",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Allianz GI",
                            ),
                            Span {
                                start: 24,
                                end: 36,
                            },
                        ),
                        span: Span {
                            start: 18,
                            end: 36,
                        },
                    },
                ],
                binding: Some(
                    "scope",
                ),
                span: Span {
                    start: 0,
                    end: 48,
                },
            },
        ),
    ],
}
