rust/crates/dsl-core/tests/snapshots/ast_golden__ast_changeset_validate.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 264
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "changeset",
                verb: "validate",
                arguments: [
                    Argument {
                        key: "changeset-id",
                        value: SymbolRef {
                            name: "cs",
                            span: Span {
                                start: 34,
                                end: 37,
                            },
                        },
                        span: Span {
                            start: 20,
                            end: 37,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 38,
                },
            },
        ),
    ],
}
